tests/ui/ferrocene/compiler-arguments/upper_l/upper_l_all_no-dir.rs
//@ check-fail
//@ compile-flags: -L all=
//~? ERROR empty search path

fn main() {}

// ferrocene-annotations: um_rustc_L
